--- a/Final_Assessment_JunJie/Base.lproj/Main.storyboard
+++ b/Final_Assessment_JunJie/Base.lproj/Main.storyboard
@@ -315,7 +315,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="EU6-li-TFm">
             <objects>
-                <tabBarController id="2TX-1w-mVh" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomeNavigationController" id="2TX-1w-mVh" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="bMK-5e-b8Q">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -323,7 +323,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ezn-Kl-7KX" kind="relationship" relationship="viewControllers" id="bzC-Bm-VGw"/>
-                        <segue destination="i12-E3-r9o" kind="relationship" relationship="viewControllers" id="8XF-x5-YmN"/>
+                        <segue destination="usA-pF-XPw" kind="relationship" relationship="viewControllers" id="8XF-x5-YmN"/>
                         <segue destination="0nq-e7-0hk" kind="relationship" relationship="viewControllers" id="Obj-58-bqf"/>
                     </connections>
                 </tabBarController>
@@ -331,10 +331,10 @@
             </objects>
             <point key="canvasLocation" x="-386" y="100"/>
         </scene>
-        <!--Profile-->
+        <!--Profile View Controller-->
         <scene sceneID="aEU-pU-m25">
             <objects>
-                <viewController id="i12-E3-r9o" sceneMemberID="viewController">
+                <viewController id="i12-E3-r9o" customClass="ProfileViewController" customModule="Final_Assessment_JunJie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4AO-Le-nwK"/>
                         <viewControllerLayoutGuide type="bottom" id="jNK-sZ-mGB"/>
@@ -342,13 +342,70 @@
                     <view key="view" contentMode="scaleToFill" id="N27-YB-mn9">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dGe-va-IyK">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feedCell" textLabel="znb-g8-EUG" detailTextLabel="P1C-ym-5Nd" style="IBUITableViewCellStyleSubtitle" id="mr1-l3-76S">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mr1-l3-76S" id="xf4-J6-i4o">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="znb-g8-EUG">
+                                                    <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P1C-ym-5Nd">
+                                                    <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="i12-E3-r9o" id="YWn-gc-YBE"/>
+                                    <outlet property="delegate" destination="i12-E3-r9o" id="80p-k0-Nwd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="dGe-va-IyK" secondAttribute="trailing" id="DB2-Z1-m6O"/>
+                            <constraint firstItem="dGe-va-IyK" firstAttribute="top" secondItem="4AO-Le-nwK" secondAttribute="bottom" constant="-44" id="L6A-d2-iQK"/>
+                            <constraint firstItem="jNK-sZ-mGB" firstAttribute="top" secondItem="dGe-va-IyK" secondAttribute="bottom" id="j7E-pq-XHd"/>
+                            <constraint firstItem="dGe-va-IyK" firstAttribute="leading" secondItem="N27-YB-mn9" secondAttribute="leading" id="x7q-dz-yXN"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" id="T6Y-CH-Pox"/>
+                    <navigationItem key="navigationItem" id="A99-zU-V4L">
+                        <nil key="title"/>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="6Vu-fI-hTS">
+                            <rect key="frame" x="90" y="7" width="420" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="i12-E3-r9o" id="OZ5-Gc-AX6"/>
+                            </connections>
+                        </textField>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="statusTextFld" destination="6Vu-fI-hTS" id="x82-XK-hHr"/>
+                        <outlet property="tableView" destination="dGe-va-IyK" id="ocE-6E-i2b"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u6d-DX-irG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="412" y="346"/>
+            <point key="canvasLocation" x="1157" y="348"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="gFg-Tf-BiB">
@@ -390,7 +447,7 @@
         <!--View Controller-->
         <scene sceneID="r3G-t2-Bvr">
             <objects>
-                <viewController id="hun-Uw-Vq0" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="hun-Uw-Vq0" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jMu-Mo-T8W"/>
                         <viewControllerLayoutGuide type="bottom" id="fmb-oN-kXP"/>
@@ -404,7 +461,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="vqd-Y5-N8N">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vqd-Y5-N8N" id="jou-9v-Ypb">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -469,6 +526,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DNj-tl-jsD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="412" y="-317"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="U58-Tw-uHS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="usA-pF-XPw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="T6Y-CH-Pox"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="i9X-84-KT3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="i12-E3-r9o" kind="relationship" relationship="rootViewController" id="UC6-te-VS7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a1H-lQ-fVh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="345" y="348"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
